--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -11,7 +11,7 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
     <li>
         <a
             class="py-3 text-base"
-            href="mailto:contact.mancinelliasr8g@gmail.com"
+            href="mailto:mancinelliasr8@gmail.com"
             target="_blank"
             referrerpolicy="no-referrer-when-downgrade">Contact</a
         >
