--- a/src/pages/utility.astro
+++ b/src/pages/utility.astro
@@ -5,6 +5,7 @@ import GenPass from "../components/GenPass.astro";
 import TestaCroce from "../components/TestaCorce.astro";
 import ConvBase64 from "../components/ConvBase64.astro";
 import DiffDate from "../components/DiffDate.astro";
+import ConvertWebP from "../components/ConvertWebP.astro";
 
 ---
 
@@ -49,6 +50,15 @@ import DiffDate from "../components/DiffDate.astro";
     </div>
     <div class="collapse-content">
       <DiffDate />
+    </div>
+  </div>
+  <div class="collapse collapse-arrow bg-base-200">
+    <input type="radio" name="my-accordion-2" />
+    <div class="collapse-title text-xl font-medium">
+      Converti immagine in webP
+    </div>
+    <div class="collapse-content">
+      <ConvertWebP />
     </div>
   </div>
 
