--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -8,6 +8,7 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
     <li><a class="py-3 text-base" id="cv" href="/cv">CV</a></li>
     <li><a class="py-3 text-base" id="blog" href="/blog">Progetti</a></li>
     <li><a class="py-3 text-base" id="utility" href="/utility">Utility</a></li>
+    <li><a class="py-3 text-base" id="link" href="/link">Link</a></li>
     <li>
         <a
             class="py-3 text-base"
