--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -61,23 +61,25 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <div class="text-3xl w-full font-bold">Certificazioni</div>
   </div>
 
-  <ul class="list-disc mx-6 mb-10 grid gap-2">
-    <li>
-      <a href="https://media.licdn.com/dms/image/C4D22AQEIeQXEpMb-qQ/feedshare-shrink_1280/0/1664486095821?e=1710979200&v=beta&t=G0iNnkywxtbH7IbJUC3pI1CSRNG8AZe5yr3t1gksR-A" target="_blank"> DTLab Networking BootCamp 2022</a>
-    </li>
-    <li>
-      <a href="https://www.credly.com/badges/49b997f4-3e67-454b-b7d3-ef25211ddf8e/linked_in?t=rd63xk" target="_blank"> DevNet Associate</a>
-    </li>
-    <li>
-      <a href="https://www.freecodecamp.org/certification/fcc5da92dc9-e427-443b-9586-43039d1a46f8/machine-learning-with-python-v7" target="_blank"> Machine Learning with Python</a>
-    </li>
-    <li>
-      <a href="#" > PCAP: Programming Essentials in Python</a>
-    </li>
-    <li>
-      <a href="https://www.freecodecamp.org/certification/fcc5da92dc9-e427-443b-9586-43039d1a46f8/data-analysis-with-python-v7" target="_blank"> Data Analysis with Python</a>
-    </li>
-  </ul>
+  <div class="flex flex-wrap gap-2 mb-10 mx-4">
+    <a href="https://media.licdn.com/dms/image/C4D22AQEIeQXEpMb-qQ/feedshare-shrink_1280/0/1664486095821?e=1710979200&v=beta&t=G0iNnkywxtbH7IbJUC3pI1CSRNG8AZe5yr3t1gksR-A" target="_blank" class="badge badge-success">
+      DTLab BootCamp 2022
+    </a>
+    <a href="https://www.credly.com/badges/49b997f4-3e67-454b-b7d3-ef25211ddf8e/linked_in?t=rd63xk" target="_blank" class="badge badge-info">
+      DevNet Associate
+    </a>
+    <a href="https://www.freecodecamp.org/certification/fcc5da92dc9-e427-443b-9586-43039d1a46f8/machine-learning-with-python-v7" target="_blank" class="badge badge-accent">
+      ML with Python
+    </a>
+    <a href="#" class="badge badge-warning">
+      PCAP Python
+    </a>
+    <a href="https://www.freecodecamp.org/certification/fcc5da92dc9-e427-443b-9586-43039d1a46f8/data-analysis-with-python-v7" target="_blank" class="badge badge-secondary">
+      Data Analysis with Python
+    </a>
+  </div>
+  
+
 
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Skills</div>
