--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -114,9 +114,10 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
   
   
+  
   <div class="mb-3">
     <div class="text-xl w-full font-semibold">
-      Addittional
+      Additional
     </div>
   </div>
 
